# DH09-sw

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  openocd.gdb  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
config/: commands.toml  config.toml  dataflow.yaml  datatypes.toml  events.toml
crates/boot/: Cargo.toml  build.rs  memory.x
crates/boot/src/: adds  gs_master.rs  lib.rs  main.rs  main_hal.rs  main_itm.rs
crates/bootloader/: Cargo.toml  golden.sha256  gs-boot.rs  memory.x
crates/bootloader/src/: main.rs
crates/braking-testing/: Cargo.toml
crates/braking-testing/src/: main.rs
crates/can-testing-listener/: Cargo.toml  build.rs
crates/can-testing-listener/src/: main.rs
crates/can-testing-sender/: Cargo.toml  build.rs
crates/can-testing-sender/src/: main.rs
crates/dummy-gs/: Cargo.toml
crates/dummy-gs/src/: main.rs
crates/fsm/: Cargo.toml  build.rs
crates/fsm/.cargo/: config.toml
crates/fsm/src/: commons.rs  emergency_fsm.rs  entry_methods.rs  exit_methods.rs  fsm.rs  high_voltage_fsm.rs  levitation_fsm.rs  lib.rs  main_fsm.rs  operating_fsm.rs  propulsion_fsm.rs
crates/fsm/src/commons/: data.rs  macros.rs  mod.rs  traits.rs  types.rs
crates/fsm/src/tests/: commons.rs  data.rs  fsm.rs  high_voltage_fsm.rs  main_fsm.rs  mod.rs  propulsion_fsm.rs
crates/fsm/src/utils/: data.rs  mod.rs  types.rs
crates/fsm/tests/: data.rs  other.rs
crates/lemur/: Cargo.toml
crates/lemur/src/: main.rs
crates/lib/: Cargo.toml  build.rs
crates/lib/src/: can1.rs  can2.rs  datapoint.rs  lib.rs
crates/lib/src/can/: can1.rs  can2.rs  fdcan.rs  mod.rs
crates/lib/src/utils/: data.rs  event_types.rs  mod.rs
crates/main/: Cargo.toml  build.rs  memory.qemu.x  memory.x
crates/main/src/: can.rs  comms_tasks.rs  ethernet.rs  gs_master.rs  lib.rs  main.rs  matching_methods.rs  panic_handler.rs
crates/main/src/can/: can1.rs  can2.rs  mod.rs
crates/main/src/ethernet/: logic.rs  mod.rs  testing.rs  types.rs
gs/: .gitignore  .prettierrc.yaml  README.md  output.css  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
gs/docs/: GDD.md
gs/docs/api/: apiGDD.md
gs/scripts/: gs_frontend_from_dataflow.sh  populate_commands_macos.sh  populate_datatypes_macos.sh  populate_datatypes_new.sh
gs/src/: app.css  app.html  app.postcss  delft_hyperloop_dark.ts
gs/src/lib/: index.ts  namedDatatypeEnum.ts  types.ts
gs/src/lib/components/: AlertModal.svelte  Battery.svelte  BinaryInput.svelte  BinaryInput1.svelte  BinaryInput2.svelte  BottomBar.svelte  FSM.svelte  Light.svelte  Localiser.svelte  Localization.svelte  MainFSM.svelte  Pneumatics.svelte  PropulsionHeartbeat.svelte  PropulsionInitFault.svelte  PropulsionPoint.svelte  PropulsionPointDisplay.svelte  Scene.svelte  SpeedsInput.svelte  StartLevitating.svelte  StopLevitating.svelte  SubFSMs.svelte  TitleBar.svelte
gs/src/lib/components/abstract/: Command.svelte  Command64Bits.svelte  TauriCommand.svelte  ToggleCommand.svelte
gs/src/lib/components/generic/: Chart.svelte  CollapsibleTile.svelte  GraphListButton.svelte  GraphListCategory.svelte  Status.svelte  Store.svelte  Table.svelte  Tile.svelte  TileGrid.svelte  ValueStore.svelte
gs/src/lib/panels/: DetailsPanel.svelte  LogsPanel.svelte  VitalsPanel.svelte
gs/src/lib/panels/tabs/: BatteriesTab.svelte  DebugTab.svelte  HomeTab.svelte  LeviTab.svelte  LocationTab.svelte  PneumaticsTab.svelte  PowertrainTab.svelte  ProceduresTab.svelte  PropulsionTab.svelte  RunInitTab.svelte
gs/src/lib/panels3d/: LogsPanel3D.svelte  MainPanel3D.svelte  Scene.svelte  StartScreen3D.svelte
gs/src/lib/panels3d/components/: BurgerMenu.svelte  Scene.svelte
gs/src/lib/stores/: data.ts  state.ts
gs/src/lib/util/: GrandDataDistributor.ts  Modal.ts  PlotBuffer.ts  TauriCommand.ts  WindowControl.ts  datapointStatus.ts  parsers.ts  subscribers.ts  util.ts
gs/src/routes/: +layout.svelte  +page.svelte
gs/src/routes/view/chart/[title]/: +page.svelte  +page.ts
gs/src/routes/view/charts/: +page.svelte
gs/src/routes/view/pod/: +page.svelte  PodState.ts
gs/src/routes/view/tab/[index]/: +page.svelte  +page.ts
gs/station/: Cargo.toml  README.md  build.rs  tauri.conf.json
gs/station/capabilities/: migrated.json
gs/station/icons/: icon.icns
gs/station/src/: backend.rs  lib.rs  main.rs
gs/station/src/analysis/: main.rs
gs/station/src/battery/: mod.rs
gs/station/src/connect/: handle_incoming_data.rs  mod.rs  queueing.rs  tcp_reader.rs  tcp_writer.rs
gs/station/src/data/: process.rs
gs/station/src/frontend/: app.rs  commands.rs  datapoint_dict.rs  logging.rs  mod.rs
gs/station/src/tui/: app.rs  interactions.rs  main.rs  mod.rs  render.rs
gs/tests/unit/lib/: parsers.spec.ts  util.spec.ts
scripts/: bootleg_ground_station.sh  calculate_can_parameters.py  gs_with_config.sh
test/firmware/: test_update.py
util/: Cargo.toml
util/src/: commands.rs  dataflow.rs  datatypes.rs  events.rs  fmt.rs  fsm_states.rs  info.rs  ip.rs  lib.rs  logs.rs
util/src/dataflow/: frontend.rs  gs.rs  levi.rs  mainpcb.rs  mod.rs  procedures.rs
