[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
fdcan = {version = "0.2.1", features = ["fdcan_h7"]}
stm32h7xx-hal = {version = "0.16.0", features = ["stm32h753v","can", "device-selected"]}
embassy-stm32 = { version = "*", features = [
    # "defmt",
    "stm32h753zi",
    "time-driver-any",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-boot = "*"
embassy-boot-stm32 = "*"
embassy-sync = "*"
embassy-executor = { version = "*", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    # "defmt",
    "integrated-timers",
] }
embassy-net = {version = "*", features = [
    "medium-ethernet",
    "proto-ipv4",
    "tcp",
    "dns",
    "dhcpv4",
]}
embassy-time = {version = "*"}

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.7"
embedded-can = "0.4.1"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.7.1" }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3.1" }
# panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
static_cell = "2"
# defmt = "0.3"
# defmt-rtt = "0.4"

[patch.crates-io]
embassy-stm32 = { path = "../embassy/embassy-stm32" }
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-boot = { path = "../embassy/embassy-boot" }
embassy-boot-stm32 = { path = "../embassy/embassy-boot-stm32" }
embassy-executor = { path = "../embassy/embassy-executor" }
embassy-net = { path = "../embassy/embassy-net" }
embassy-time = { path = "../embassy/embassy-time" }
