[workspace]
members = ["crates/*"]
default-members = ["crates/main"]
resolver = "2"

[workspace.dependencies]
fdcan = {version = "0.2.1", features = ["fdcan_h7"]}
stm32h7xx-hal = {version = "0.16.0", features = ["stm32h753v","can", "device-selected"]}
embassy-stm32 = { version = "*", features = [
    "defmt",
    "stm32h753zi",
    "time-driver-any",
    "exti",
    # "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-boot = "*"
embassy-boot-stm32 = "*"
embassy-sync = { version = "*", features = ["defmt"] }
embassy-executor = { version = "*", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-net = { version = "*", features = [
    "medium-ethernet",
    "proto-ipv4",
    "tcp",
    "dns",
    "dhcpv4",
    "defmt",
] }
embassy-time = { version = "*" }
embassy-futures = {version = "*"}

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.7"
embedded-can = "0.4.1"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.7.1" }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
static_cell = { version = "2", features = ["nightly"] }
defmt = "*"
defmt-rtt = "*"
defmt-decoder = { version = "*", features = ["unstable"] }
defmt-semihosting = {version = "*", features = []}
anyhow = "1"

fsm = {path = "crates/fsm"}

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c" }

defmt = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-semihosting = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-decoder = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
