[workspace]
members = ["crates/*", "gs/station", "util"]
default-members = ["crates/main"]
resolver = "2"

[workspace.dependencies]
fdcan = {version = "0.2.1", features = ["fdcan_h7"]}
stm32h7xx-hal = {version = "0.16.0", features = ["stm32h753v", "can", "device-selected"]}

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.7"
embedded-can = "0.4.1"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.7.1" }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
static_cell = { version = "2", features = ["nightly"] }
defmt = "*"
defmt-rtt = "*"
defmt-decoder = { version = "*", features = ["unstable"] }
defmt-semihosting = {version = "*", features = []}
anyhow = "1"

fsm = {path = "crates/fsm"}
embedded-test  = { version = "0.6.0", features = ["embassy", "defmt"] }
rtt-target = { version = "*", features=["defmt"]}
#features = ["defmt"]
panic-rtt-target = "*"

goose_utils = {path = "util"}

[workspace.dependencies.embassy-stm32]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"
features = [
    "defmt",
    "stm32h753zi",
    "time-driver-any",
    "exti",
    # "memory-x",
    "unstable-pac",
    "chrono",
]

[workspace.dependencies.embassy-boot]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"

[workspace.dependencies.embassy-boot-stm32]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"


[workspace.dependencies.embassy-sync]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"
features = ["defmt"]

[workspace.dependencies.embassy-executor]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"
features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    # "integrated-timers",
]

[workspace.dependencies.embassy-net]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"
features = [
    "medium-ethernet",
    "proto-ipv4",
    "tcp",
    "dns",
    "dhcpv4",
    "defmt",
]

[workspace.dependencies.embassy-time]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"

[workspace.dependencies.embassy-futures]
git = "https://github.com/delft-hyperloop/embassy"
rev = "0dd324f9e10b5de01b01e540696fe9f174591221"

[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-semihosting = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }
defmt-decoder = { git = "https://github.com/knurling-rs/defmt", rev = "b7a89f56059fc66ac3c7cc3445d092829599e699" }

#embedded-tests = {git = "https://github.com/probe-rs/embedded-test", rev = "ecec5b545afd05087bb3f2eab421324ae7641e17"}
#embedded-tests-macros = {git="https://github.com/probe-rs/embedded-test", rev="ecec5b545afd05087bb3f2eab421324ae7641e17"}

rtt-target = { git = "https://github.com/probe-rs/rtt-target", rev = "ab0fb987fae742a33b843ca92a5c8da75ede38cc" }
#panic-rtt-target = { git = "https://github.com/probe-rs/rtt-target", rev = "ab0fb987fae742a33b843ca92a5c8da75ede38cc" }