[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32        = { version = "0.5", features = ["stm32f411", "time-driver-any"] }
embassy-sync         = "0.5"
embassy-boot         = "0.13"
embassy-boot-stm32   = "0.13"
embassy-executor     = "1.0"
embassy-net          = "0.5"
embassy-time         = "0.2"
panic-probe          = "0.4"
cortex-m             = "0.7"
cortex-m-rt          = "0.7"
cortex-m-semihosting = "0.5"
embedded-storage     = "0.1"
embedded-io-async    = "0.1"
rand_core            = "0.6"
static_cell          = "1.0"
heapless             = "0.7"
defmt                = "0.3"
defmt-rtt            = "0.4"
defmt-decoder        = "0.3"
defmt-semihosting    = "0.1"
smoltcp              = "0.12"
sha2                 = "0.10"
sha2-async          = "0.10"
sha2-embedded       = "0.10"