[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32        = { version = "0.1.0", features = ["stm32h753zi", "memory-x", "time-driver-any", "exti"] }
embassy-sync         = "0.2.0"
embassy-executor     = { version = "0.2.0", features = ["nightly", "integrated-timers"] }
embassy-time        = { version = "0.1.0", features = ["tick-hz-32_768"] }
embassy-boot        = { version = "0.1.0", features = ["nightly"] }
embassy-boot-stm32  = "0.1.0"
embassy-net         = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

defmt               = "0.3"
defmt-rtt           = "0.4"

cortex-m            = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt        = "0.7"
embedded-hal       = "0.2.7"
embedded-io        = "0.4.0"
embedded-storage   = "0.3.0"

smoltcp            = { version = "0.9.1", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-udp"] }
sha2               = { version = "0.10", default-features = false }
heapless           = "0.7"

[profile.release]
debug = true
opt-level = "z"
lto = true