[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-net.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
embedded-storage.workspace = true

smoltcp.workspace = true
sha2 = { version = "0.10", default-features = false }
heapless.workspace = true
panic-halt = "0.2.0"

[profile.release]
debug = true
opt-level = "z"
lto = true