[package]
name = "braking-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-storage.workspace = true
embedded-io-async.workspace = true
rand_core.workspace = true
static_cell.workspace = true
heapless.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
