[package]
name = "can-testing-listener"
version = "0.1.0"
edition = "2024"

[features]
default = ["h753"]
h753 = ["embassy-stm32/stm32h753zi"]
h743 = ["embassy-stm32/stm32h743zi"]

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-storage.workspace = true
embedded-io-async.workspace = true
rand_core.workspace = true
static_cell.workspace = true
heapless.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
