[package]
name = "can-testing-sender"
version = "0.1.0"
edition = "2021"

[features]
read=[]

[dependencies]
phf = { version = "0.11", default-features = false, features = ["macros"] }


embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
embassy-futures.workspace=true

panic-halt.workspace = true
panic-semihosting.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-storage.workspace = true
embedded-io-async.workspace = true
rand_core.workspace = true
static_cell.workspace = true
heapless.workspace = true
stm32h7xx-hal.workspace = true
fdcan.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[lints.clippy]
redundant_static_lifetimes = "allow"
missing_docs_in_private_items = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

