[package]
name = "fsm"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c", optional = true, default-features = false, features = ["executor-thread", "arch-cortex-m"] }
panic-halt.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-storage.workspace = true
embedded-io-async.workspace = true
rand_core.workspace = true
static_cell.workspace = true
heapless.workspace = true
