[package]
name = "fsm"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-boot.workspace = true
embassy-boot-stm32.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "af6fbb0ee19c5200bb4bafb9a10c7557fbcd460c", optional = true, default-features = false, features = ["executor-thread", "arch-cortex-m"] }
panic-halt.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-storage.workspace = true
embedded-io-async.workspace = true
rand_core.workspace = true
static_cell.workspace = true
heapless.workspace = true
defmt-test = "0.3.2"
#once_cell = { version = "1.20.2" , features = ["critical-section"], default-features = false, optional = true}

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[lints.clippy]
redundant_static_lifetimes = "allow"
missing_docs_in_private_items = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

[dev-dependencies]
embedded-test.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
rtt-target.workspace = true
#panic-rtt-target.workspace = true

[[test]]
name = "data"
harness = false

[[test]]
name = "other"
harness = false


[lib]
name = "fsm"
path = "src/lib.rs"
doctest = false
harness = false
test=false
crate-type = ["lib"]
