cargo-features = ["per-package-target"]

[package]
name = "lemur"
version = "0.1.0"
edition = "2021"

forced-target = "x86_64-apple-darwin"

[dependencies]
anyhow.workspace = true
defmt-decoder.workspace = true

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[lints.clippy]
redundant_static_lifetimes = "allow"
missing_docs_in_private_items = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
